--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "demo"]
 	path = demo
-	url = git://github.com/Gozala/interactivate-template.git
+	url = https://github.com/Gozala/interactivate-template.git
